--- a/tickets.html
+++ b/tickets.html
@@ -10,6 +10,10 @@
     <!-- Styles -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
+    @font-face {
+      font-family:"wireframe";
+      src: url("fonts/WIREFRAME.ttf");
+    }
       * {
         margin: 0;
       }
@@ -101,10 +105,10 @@
       }
 
       .pagetitle {
-        font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-        text-transform:uppercase;
+        font-family: "wireframe", "Palatino Linotype", Palatino, serif;
+        text-transform:lowercase;
         text-align: center;
-        font-size:40px;
+        font-size:60px;
       }
 
       .poster {
@@ -122,7 +126,7 @@
       <div class="lead">
         <h1 class="pagetitle">Tickets</h1>
         <br>
-        <p>Tickets are free of charge. Check back soon for ticket reservations!</p>
+        <p>Tickets are free of charge. There will be a limited amount of ticket reservations opening a week before the show, and the rest of the seats will be available first come, first serve. Check back soon for more details!</p>
       </div>
     </div> <!-- /container -->
     <div class="push"></div> 
