--- a/castandcrew.html
+++ b/castandcrew.html
@@ -10,6 +10,10 @@
     <!-- Styles -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
+    @font-face {
+      font-family:"wireframe";
+      src: url("fonts/WIREFRAME.ttf");
+    }
       * {
         margin: 0;
       }
@@ -114,10 +118,10 @@
       }
 
       .pagetitle {
-        font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-        text-transform:uppercase;
+        font-family: "wireframe", "Palatino Linotype", "Book Antiqua", Palatino, serif;
+        text-transform:lowercase;
         text-align: center;
-        font-size:40px;
+        font-size:60px;
       }
 
       .poster {
@@ -140,7 +144,9 @@
       }
 
       .casttitle {
-        font-size:24px;
+        font-size:40px;
+        font-family: "wireframe", "Palatino Linotype", "Book Antiqua", Palatino, serif;
+        text-transform:lowercase;
       }
     </style>
   </head>
@@ -149,7 +155,7 @@
     <div class="wrapper">
     <div class="container-narrow">
       <div class="lead">
-        <h1 class="pagetitle">CAST &amp; CREW</h1>
+        <h1 class="pagetitle">CAST and CREW</h1>
         <br>
         <div class="castcol">
           <div class="casttitle"><p>Cast<p></div>
