--- a/castandcrew.html
+++ b/castandcrew.html
@@ -217,6 +217,8 @@
               <tr><td class="left">Rick Flores</td><td class="right">Guitar</td></tr>
               <tr><td class="left">Kayland Harrison</td><td class="right">Violin and Synthesizer</td></tr>
               <tr><td class="left">Ethan Straffin</td><td class="right">Percussion</td></tr>
+              <tr><td class="left">Jason Griffin</td><td class="right">Rehearsal Pianist</td></tr>
+              <tr><td class="left">Chan Chi Ling</td><td class="right">Rehearsal Pianist</td></tr>
             </table>
           </p>
         </div>
