moved nav to header

--- a/about.html
+++ b/about.html
@@ -59,10 +59,10 @@
 
       .column {
         width:150px;
-        padding:10px;
         text-align:center;
         float:left;
-        font-size:18px;
+        padding-top:15px;
+        font-size:21px;
         font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
         text-transform:uppercase;
       }
@@ -134,7 +134,14 @@
     <div class="wrapper">
     <div class="container-narrow">
       <div class="lead">
-        <h1 class="pagetitle">About next to normal</h1>
+        <h1 class="pagetitle">About</h1>
+        <div class="column"><a href="index.html">Home</a></div>
+        <div class="column">About</div>
+        <div class="column"><a href="castandcrew.html">Cast &amp; Crew</a></div>
+        <div class="column"><a href="tickets.html">Tickets</a></div>
+        <div style="clear:all;"></div>
+        <br>
+        <br>
         <br>
         <p style="font-size:26px;">May 22-24 at 8pm at the Elliot Programming Center</p>
         <br>
@@ -150,13 +157,7 @@
   </div><!-- /wrapper -->
 
     <div class="footer">
-      <div class="container-narrow">
-        <div class="column"><a href="index.html">Home</a></div>
-        <div class="column">About</div>
-        <div class="column"><a href="castandcrew.html">Cast &amp; Crew</a></div>
-        <div class="column"><a href="tickets.html">Tickets</a></div>
-      </div>
-      <div style="clear:all;"></div>
+      
       <img src="ramshead.png">
     </div>
 
