--- a/castandcrew.html
+++ b/castandcrew.html
@@ -54,10 +54,10 @@
 
       .column {
         width:150px;
-        padding:10px;
         text-align:center;
         float:left;
-        font-size:18px;
+        padding-top:15px;
+        font-size:21px;
         font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
         text-transform:uppercase;
       }
@@ -156,7 +156,13 @@
     <div class="container-narrow">
       <div class="lead">
         <h1 class="pagetitle">CAST and CREW</h1>
-        <br>
+        <div class="container-narrow-mod">
+          <div class="column"><a href="index.html">Home</a></div>
+          <div class="column"><a href="about.html">About</a></div>
+          <div class="column">Cast &amp; Crew</div>
+          <div class="column"><a href="tickets.html">Tickets</a></div>
+        </div>
+        <div style="clear:all;"></div>
         <div class="castcol">
           <div class="casttitle"><p>Cast<p></div>
           <p>
@@ -223,19 +229,13 @@
           </p>
         </div>
 
-        <div style="clear:all;"></div>
       </div>
     </div> <!-- /container -->
     <div class="push"></div> 
   </div><!-- /wrapper -->
 
     <div class="footer">
-      <div class="container-narrow-mod">
-        <div class="column"><a href="index.html">Home</a></div>
-        <div class="column"><a href="about.html">About</a></div>
-        <div class="column">Cast &amp; Crew</div>
-        <div class="column"><a href="tickets.html">Tickets</a></div>
-      </div>
+      
       <div style="clear:all;"></div>
       <img src="ramshead.png">
     </div>
