--- a/tickets.html
+++ b/tickets.html
@@ -54,10 +54,10 @@
 
       .column {
         width:150px;
-        padding:10px;
         text-align:center;
         float:left;
-        font-size:18px;
+        padding-top:15px;
+        font-size:21px;
         font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
         text-transform:uppercase;
       }
@@ -117,6 +117,10 @@
         margin-left:20px; 
         margin-bottom:20px;
       }
+
+      .links {
+        font-size:25px;
+      }
     </style>
   </head>
 
@@ -125,6 +129,13 @@
     <div class="container-narrow">
       <div class="lead">
         <h1 class="pagetitle">Tickets</h1>
+        <div class="column"><a href="index.html">Home</a></div>
+        <div class="column"><a href="about.html">About</a></div>
+        <div class="column"><a href="castandcrew.html">Cast &amp; Crew</a></div>
+        <div class="column">Tickets</div>
+        <div style="clear:all;"></div>
+        <br>
+        <br>
         <br>
         <p>Tickets are free of charge. There will be a limited amount of ticket reservations opening a week before the show, and the rest of the seats will be available first come, first serve. Check back soon for more details!</p>
       </div>
@@ -133,13 +144,6 @@
   </div><!-- /wrapper -->
 
     <div class="footer">
-      <div class="container-narrow">
-        <div class="column"><a href="index.html">Home</a></div>
-        <div class="column"><a href="about.html">About</a></div>
-        <div class="column"><a href="castandcrew.html">Cast &amp; Crew</a></div>
-        <div class="column">Tickets</div>
-      </div>
-      <div style="clear:all;"></div>
       <img src="ramshead.png">
     </div>
 
