--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
         padding-top:30px;
         text-transform:uppercase;
         font-family:"steeltongs", "Palatino Linotype", "Book Antiqua", Palatino, serif;
-        letter-spacing: 1px;
+        letter-spacing: 0px;
       }
       /* Custom container */
       .container-narrow {
@@ -143,14 +143,14 @@
         <br>
         <br>
         <br>
-        <p style="font-size:26px;">May 22-24 at 8pm at the Elliot Programming Center</p>
+        <p style="font-size:26px;">May 22-24 at 8pm, May 24 at 2PM, and May 25 at 3PM at the <a href="http://campus-map.stanford.edu/?id=&lat=37.42483814582808&lng=-122.177975086&zoom=15&srch=Elliott%20Program%20Center">Elliott Programming Center</a></p>
         <br>
         <a href="poster.jpg"><img class="poster" align="right" src="poster.jpg"/></a>
         
         <p>NEXT TO NORMAL tells the story of a mother, Diana Goodman, who struggles with bipolar disorder and the effect that her illness has on her family. This contemporary musical is an emotional powerhouse that addresses such issues as grieving a loss, ethics in modern psychiatry, and suburban life. With provocative lyrics and a thrilling score, this musical shows how far two parents will go to keep themselves sane and their family’s world intact.</p>
       </div>
       <div class="copyright">
-        <p>Sponsored &nbsp;&nbsp;<span class="smalltext">by</span> &nbsp;&nbsp;the ASSU &nbsp;&nbsp;Cardinal Nights &nbsp;&nbsp;Psychology One Program &nbsp;&nbsp;<span class="smalltext">and the</span> &nbsp;&nbsp;Stanford Arts Institute</p>
+        <p>Sponsored &nbsp;&nbsp;<span class="smalltext">by</span> &nbsp;&nbsp;American Studies&nbsp;&nbsp; the ASSU &nbsp;&nbsp;Cardinal Nights &nbsp;&nbsp;Psychology One Program &nbsp;&nbsp;<span class="smalltext">and the</span> &nbsp;&nbsp;Stanford Arts Institute</p>
       </div>
     </div> <!-- /container -->
     <div class="push"></div> 
