--- a/tickets.html
+++ b/tickets.html
@@ -121,6 +121,8 @@
       .links {
         font-size:25px;
       }
+
+      p { text-align: center; }
     </style>
   </head>
 
@@ -137,7 +139,19 @@
         <br>
         <br>
         <br>
-        <p>Tickets are free of charge. There will be a limited amount of ticket reservations opening a week before the show, and the rest of the seats will be available first come, first serve. Check back soon for more details!</p>
+        <p>Tickets are free of charge and available at the door. Come early to the performance of your choice to snag your ticket.
+        </p>
+        <p>
+        Evening Performances<br>
+        Thursday, May 22nd, 8PM<br>
+        Friday, May 23rd, 8PM<br>
+        Saturday, May 24th, 8PM
+        </p>
+        <p>
+        Matinees<br>
+        Saturday May 24th at 2PM<br>
+        Sunday May 25th at 3PM
+        </p>
       </div>
     </div> <!-- /container -->
     <div class="push"></div> 
